--- a/index.html
+++ b/index.html
@@ -2,89 +2,125 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My First Bootstrap Page</title>
+    <title>Isaac Guerrero Website</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
     <link href="css/main.css" rel="stylesheet">
-
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
-            <nav class="navbar navbar-expand-md
+        <nav class="navbar navbar-expand-md
                     justify-content-start
                     bg-dark navbar-dark
                     col-12">
+            <!-- Brand -->
+            <a class="navbar-brand" href="index.html">Logo</a>
+            <!-- Responsive Button for the smaller menu -->
+            <button class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <!-- Links -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutme.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="education.html">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
 
-                <!-- Brand -->
-                <a class="navbar-brand" href="#">Logo</a>
-                <!-- Responsive Button for the smaller menu -->
-                <button class="navbar-toggler" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <!-- Links -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link 1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link 2</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-
-                        <!-- Dropdown -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
-                               data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Education
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Link 1</a>
-                                <a class="dropdown-item" href="#">Link 2</a>
-                                <a class="dropdown-item" href="#">Link 3</a>
-                                <a class="dropdown-item" href="#">Link 4</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        <div class="row">
-        <p class="col-1">Col 1</p>
-        <p class="col-1">Col 2</p>
-        <p class="col-1">Col 3</p>
-        <p class="col-1">Col 4</p>
-        <p class="col-1">Col 5</p>
-        <p class="col-1">Col 6</p>
-        <p class="col-1">Col 7</p>
-        <p class="col-1">Col 8</p>
-        <p class="col-1">Col 9</p>
-        <p class="col-1">Col 10</p>
-        <p class="col-1">Col 11</p>
-        <p class="col-1">Col 12</p>
-        </div>
-    <div class="col-sm-4  text-center">
-        <h2>h2 Bootstrap heading (24px)</h2>
-        <h3>h2 Bootstrap heading (18px)</h3>
+                    <!-- Dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+                           data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="Projects/banksim.html">Bank Simulation Web Application</a>
+                            <a class="dropdown-item" href="Projects/chatroom.html">Meal Planner Web Application</a>
+                            <a class="dropdown-item" href="Projects/mealplan.html">Chatroom</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
-</div>
- <footer class="footer page-footer font-small ">
-     <div class="container">
-        <div class="row">
-            <span class="text-muted">&copy; Art Hendela, 2021 |  Terms Of Use  |  Privacy Statement</span>
+
+    <div class="container-fluid text-light p-5">
+        <div class="container bg-dark p-5 rounded">
+            <h1 class="display-4">Welcome to my Website</h1>
+            <hr>
+            <p>Check out my Resume</p>
+            <a href="images/IsaacGuerreroResumeLong.pdf" class="btn btn-primary">Resume</a>
         </div>
-     </div>
-  </footer>
+    </div>
+    <div class="row">
+
+
+        <!-- First Card -->
+        <div class="col-sm-4 mt-1">
+            <div class="card card-custom" style="width: 300px;">
+                <div class="card-header">Projects</div>
+                <div class="card-body">
+                    <h6 class="card-title">Meal Planner Web Application</h6>
+                    <p class="card-text">Developed a web application that simulates a meal planner, allowing users to find recipes, create weekly meal plans, and interact
+with a community of food enthusiasts utilizing  HTML, CSS, JavaScript, PHP, MySQL, and Tasty API</p>
+                    <h6 class="card-title">Bank Simulation Web Application</h6>
+                    <p class="card-text">Developed a web application simulating banking operations, covering the frontend, backend, and data layers. I utilized HTML5, CSS3, JavaScript, jQuery, AJAX, PHP, Apache, MySQL, Git</p>
+                    <h6 class="card-title">Chatroom</h6>
+                    <p class="card-text">Created a global chatroom for users to communicate. Implemented server and client functionalities, utilized Python for serverclient communication, and applied HTML5 and CSS3 for user interface design</p>
+                    <a href="https://github.com/Isaag1" class="btn btn-primary">GitHub</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Second Card -->
+        <div class="col-sm-4 mt-1">
+            <div class="card card-custom" style="width: 300px;">
+                <div class="card-header">Extracurricular Activities</div>
+                <div class="card-body">
+                    <h6 class="card-title">Association for Computing Machinery </h6>
+                    <p class="card-text">Secretary for the NJIT chapter of ACM.
+                        During my time in this club I was responsible for managing sponsorship matters for major events, maintained an up-to-date membership roster,
+                        and responsible for recording minutes of chapter meetings and making them publicly available</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Third Card -->
+        <div class="col-sm-4 mt-1">
+            <div class="card card-custom" style="width: 300px;">
+                <div class="card-header">Skills</div>
+                <div class="card-body">
+                    <h6 class="card-title">Programming Languages</h6>
+                    <p class="card-text">Python, Java, JavaScript, HTML, CSS, MySQL, C#, PHP, jQuery</p>
+                    <h6 class="card-title">Version Control</h6>
+                    <p class="card-text">Git & GitHub</p>
+                    <h6 class="card-title">Software</h6>
+                    <p class="card-text">Unity & Office 365</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer page-footer font-small ">
+        <div class="container">
+            <div class="row">
+                <span class="text-muted">&copy; Isaac Guerrero, 2023 |  Terms Of Use  |  Privacy Statement</span>
+            </div>
+        </div>
+    </footer>
 </div>
 
-
-    <!-- Javascript Bundle with Popper -->
+<!-- Javascript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
