--- a/education.html
+++ b/education.html
@@ -16,7 +16,7 @@
     <div class="row">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-md justify-content-start bg-dark navbar-dark col-12">
-            <a class="navbar-brand" href="index.html">Logo</a>
+            <a class="navbar-brand" href="index.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -69,32 +69,31 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <th scope="col">Course</th>
+                            <th scope="col">Highlighted Course</th>
                             <th scope="col">Description</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td>Course 1</td>
-                            <td>Description of Course 1</td>
+                            <td>IT 490</td>
+                            <td>Major design, implementation & distributed deployment issues regarding system integration, Network Operating Systems (NOS), cross-platform database integration, e-commerce and e-business applications implementation, cross-servers & multiple locations e-sessions migration, and the related communications security</td>
                         </tr>
                         <tr>
-                            <td>Course 2</td>
-                            <td>Description of Course 2</td>
+                            <td>IT 420</td>
+                            <td>Understanding of methods, tools, and technologies required to work with computer systems and networks with a detailed discussion of Internet/intranet issues, including standards, connectivity, performance, protocols, network configurations, network design, wireless technology, management, and simulation through practical cases, covering both hardware and software systems</td>
                         </tr>
                         <tr>
-                            <td>Course 1</td>
-                            <td>Description of Course 1</td>
+                            <td>IT 340</td>
+                            <td>Will introduce the tasks and techniques required to perform as a system administrator of Linux systems. Topics to be covered include booting, process control, the file system, managing users and resources, backups, configuration management, networking, the network file system, email servers, security, hardware devices, interoperability, and daemons. Whenever possible, lectures will be augmented with hands-on exercises</td>
                         </tr>
                         <tr>
-                            <td>Course 1</td>
-                            <td>Description of Course 1</td>
+                            <td>IS 331</td>
+                            <td>Designing, building, querying, updating, maintaining and managing relational databases, using the Structured Query Language (SQL). Proper database design principles are emphasized throughout the course, beginning with high level descriptions of relational databases using data modeling tools (such as entity-relationship or ER diagrams)and progressing to relational database design principles based on higher order normalizations</td>
                         </tr>
                         <tr>
-                            <td>Course 1</td>
-                            <td>Description of Course 1</td>
+                            <td>IT 202</td>
+                            <td>Learn concepts and software technologies that underline web-oriented, three-tier software architectures and applications. The enabling software mechanism include the markup languages (HTML5 and CSS3) used by browsers, client-side scripting languages and libraries (Javascript and AJAX), web servers and server-side-scripting languages (Apache, PHP, HTTP protocol), and background databases (SQL, MySQL).</td>
                         </tr>
-                        <!-- Add more rows as needed -->
                         </tbody>
                     </table>
                 </div>
