--- a/Projects/chatroom.html
+++ b/Projects/chatroom.html
@@ -2,9 +2,112 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Isaac Guerrero Website</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+    <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-expand-md
+                    justify-content-start
+                    bg-dark navbar-dark
+                    col-12">
+            <!-- Brand -->
+            <a class="navbar-brand" href="../index.html">Home</a>
+            <!-- Responsive Button for the smaller menu -->
+            <button class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <!-- Links -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="../aboutme.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../education.html">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                    </li>
+
+                    <!-- Dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+                           data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="banksim.html">Bank Simulation Web Application</a>
+                            <a class="dropdown-item" href="mealplan.html">Meal Planner Web Application</a>
+                            <a class="dropdown-item" href="chatroom.html">Chatroom</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <!-- Project Section -->
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <!-- Project Photo -->
+            <img src="path/to/your/project/photo.jpg" alt="Project Photo" class="img-fluid">
+        </div>
+
+        <div class="col-md-6">
+            <!-- Project Description -->
+            <h2>Bank Simulation Web Application</h2>
+            <ul>
+                <!-- Project Summary -->
+                <li><strong>Project Summary:</strong>
+                    <ul style="list-style-type: circle;">
+                        <li>Created a global chatroom for users to communicate. Implemented server and client functionalities, utilized Python for serverclient communication, and applied HTML5 and CSS3 for user interface design</li>
+                    </ul>
+                </li>
+                <!-- Technologies Used -->
+                <li><strong>Technologies Used:</strong>
+                    <ul style="list-style-type: circle;">
+                        <li>Java, Git</li>
+                        <!-- Add more technologies as needed -->
+                    </ul>
+                </li>
+                <!-- General Description -->
+                <li><strong>What I accomplished:</strong>
+                    <ul style="list-style-type: circle;">
+                        <li>Successfully developed and deployed a global chatroom, enabling real-time communication among users, enhancing connectivity and
+                            engagement</li>
+                        <li>Engineered a scalable server architecture capable of managing simultaneous connections and ensuring efficient message distribution</li>
+                        <li>Innovated by introducing advanced message command features (/roll, /flip) for interactive user interactions</li>
+                        <li>Demonstrated commitment to user privacy and security through the implementation of robust registration, login, and authentication systems</li>
+                        <li>Applied advanced socket programming techniques for real-time communication</li>
+                    </ul>
+                </li>
+            </ul>
+            <!-- GitHub Link -->
+            <a href= "https://github.com/Isaag1/IT114-006" class="btn btn-primary">GitHub Repository</a>
+        </div>
+    </div>
+
+    <footer class="footer page-footer font-small ">
+        <div class="container">
+            <div class="row">
+                <span class="text-muted">&copy; Isaac Guerrero, 2023 |  Terms Of Use  |  Privacy Statement</span>
+            </div>
+        </div>
+    </footer>
+</div>
+
+<!-- Javascript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous">
+</script>
 
 </body>
 </html>
