--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
     <div class="row">
         <nav class="navbar navbar-expand-md justify-content-start bg-dark navbar-dark col-12">
             <!-- Brand -->
-            <a class="navbar-brand" href="index.html">Logo</a>
+            <a class="navbar-brand" href="index.html">Home</a>
             <!-- Responsive Button for the smaller menu -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
