--- a/Projects/mealplan.html
+++ b/Projects/mealplan.html
@@ -57,7 +57,7 @@
     <div class="row mt-4">
         <div class="col-md-6">
             <!-- Project Photo -->
-            <img src="path/to/your/project/photo.jpg" alt="Project Photo" class="img-fluid">
+            <img src="../images/490proj.PNG" alt="Project Photo" class="img-fluid">
         </div>
 
         <div class="col-md-6">
