--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
                 <ul class="navbar-nav">
                     <!-- Links -->
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutme.html">About me</a>
+                        <a class="nav-link" href="aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="education.html">Education</a>
