--- a/education.html
+++ b/education.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutme.html">About me</a>
+                        <a class="nav-link" href="aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="education.html">Education</a>
