Update on the website

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- DEVELOPER: Isaac Guerrero, IS117-003, Fall 2023 -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,7 +57,7 @@
         </nav>
     </div>
 
-    <div class="container-fluid text-light p-5">
+    <div class="container-fluid text-light p-1">
         <div class="container bg-dark p-5 rounded">
             <h1 class="display-4">Welcome to my Website</h1>
             <hr>
@@ -66,7 +69,7 @@
 
 
         <!-- First Card -->
-        <div class="col-sm-4 mt-1">
+        <div class="col-sm-4 mt-3">
             <div class="card card-custom" style="width: 300px;">
                 <div class="card-header">Projects</div>
                 <div class="card-body">
@@ -83,7 +86,7 @@ with a community of food enthusiasts utilizing  HTML, CSS, JavaScript, PHP, MySQ
         </div>
 
         <!-- Second Card -->
-        <div class="col-sm-4 mt-1">
+        <div class="col-sm-4 mt-3">
             <div class="card card-custom" style="width: 300px;">
                 <div class="card-header">Extracurricular Activities</div>
                 <div class="card-body">
@@ -96,7 +99,7 @@ with a community of food enthusiasts utilizing  HTML, CSS, JavaScript, PHP, MySQ
         </div>
 
         <!-- Third Card -->
-        <div class="col-sm-4 mt-1">
+        <div class="col-sm-4 mt-3">
             <div class="card card-custom" style="width: 300px;">
                 <div class="card-header">Skills</div>
                 <div class="card-body">
